[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Images/User interface/inventory/crafting/crafting-slider.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/User interface/inventory/crafting/crafting-tab.png" type="Texture" id=3]
[ext_resource path="res://InventoryLogic/CraftingItemDescription.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/Crafting/Crafting.gd" type="Script" id=6]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/HotbarInventorySlots.tscn" type="PackedScene" id=19]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/Crafting/CraftingMenuButton.tscn" type="PackedScene" id=24]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/InventorySlots.tscn" type="PackedScene" id=44]

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="Theme" id=3]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/decrement_pressed = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/icons/increment_pressed = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 2 )
VScrollBar/styles/scroll_focus = null

[node name="Crafting" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="CraftingItemDescription" parent="." instance=ExtResource( 4 )]
visible = false
scale = Vector2( 2.7, 2.7 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -20.0
margin_right = 405.0
margin_bottom = 220.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Slider" type="VSlider" parent="."]
margin_left = 539.0
margin_top = 177.0
margin_right = 558.0
margin_bottom = 309.0
rect_scale = Vector2( 3, 3 )
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 1 )
value = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 329.0
margin_top = 171.0
margin_right = 471.0
margin_bottom = 175.0

[node name="1" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 142.0
custom_constants/separation = 71
alignment = 1

[node name="wood axe" parent="VBoxContainer/1" instance=ExtResource( 24 )]

[node name="wood pickaxe" parent="VBoxContainer/1" instance=ExtResource( 24 )]
margin_left = 71.0
margin_right = 71.0

[node name="wood hoe" parent="VBoxContainer/1" instance=ExtResource( 24 )]
margin_left = 142.0
margin_right = 142.0

[node name="2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 142.0
margin_bottom = 4.0
custom_constants/separation = 71
alignment = 1

[node name="wood sword" parent="VBoxContainer/2" instance=ExtResource( 24 )]
visible = false
margin_right = 128.0

[node name="blueprint" parent="VBoxContainer/2" instance=ExtResource( 24 )]
visible = false
margin_right = 128.0

[node name="hammer" parent="VBoxContainer/2" instance=ExtResource( 24 )]
visible = false
margin_right = 128.0

[node name="Control" type="Control" parent="VBoxContainer"]
visible = false
margin_top = 4.0
margin_right = 128.0
margin_bottom = 4.0

[node name="CraftingMenu" type="ScrollContainer" parent="."]
margin_left = 328.0
margin_top = 171.0
margin_right = 540.0
margin_bottom = 602.0
mouse_filter = 2
theme = SubResource( 3 )
scroll_horizontal_enabled = false

[node name="Items" type="Control" parent="CraftingMenu"]
margin_bottom = 800.0
rect_min_size = Vector2( 0, 800 )

[node name="wood axe" parent="CraftingMenu/Items" instance=ExtResource( 24 )]

[node name="wood pickaxe" parent="CraftingMenu/Items" instance=ExtResource( 24 )]
margin_left = 71.0
margin_right = 71.0

[node name="wood hoe" parent="CraftingMenu/Items" instance=ExtResource( 24 )]
margin_left = 142.0
margin_right = 142.0

[node name="wood sword" parent="CraftingMenu/Items" instance=ExtResource( 24 )]
margin_left = -1.0
margin_top = 72.0
margin_right = 127.0
margin_bottom = 72.0

[node name="blueprint" parent="CraftingMenu/Items" instance=ExtResource( 24 )]
margin_left = 71.0
margin_top = 72.0
margin_right = 199.0
margin_bottom = 72.0

[node name="hammer" parent="CraftingMenu/Items" instance=ExtResource( 24 )]
margin_left = 144.0
margin_top = 77.0
margin_right = 272.0
margin_bottom = 77.0

[node name="InventorySlots" parent="." instance=ExtResource( 44 )]
visible = false
margin_left = 636.0
margin_top = 313.0
margin_right = 930.0
margin_bottom = 565.0
custom_constants/vseparation = 12
custom_constants/hseparation = 9
columns = 5
__meta__ = {
"_edit_lock_": true
}

[node name="HotbarInventorySlots" parent="." instance=ExtResource( 19 )]
visible = false
margin_left = 636.0
margin_top = 180.0
margin_right = 930.0
margin_bottom = 294.0
custom_constants/vseparation = 12
custom_constants/hseparation = 9
columns = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[connection signal="value_changed" from="Slider" to="." method="_on_Slider_value_changed"]
